# pico-typing-wars

./: .gitignore  CMakeLists.txt  README.md  README_fr.md  pico_sdk_import.cmake  rapport_progres_l01.md  shell.nix
blinky/: .gitignore  Cargo.toml
blinky/src/: main.rs
pico-button-wars/: .gitignore  Cargo.toml  rust-toolchain.toml
pico-button-wars/src/: button.rs  common.rs  game.rs  led.rs  main.rs
pico-typing-wars/: .gitignore  Cargo.toml  shell.nix
pico-typing-wars/.cargo/: config.toml
pico-typing-wars/src/: game.rs  led.rs  main.rs
src/: main.c
